# authentification

./: Config.hpp  Controller.cpp  Routes.hpp  config.json  main.cpp  server
anlyse_data/: README  main.cpp
src/: AuthMiddleware.hpp  JWT.hpp  README  User.hpp  UserController.hpp  UserModel.hpp  UserService.hpp  UserValidator.hpp  boost_api.cpp  routes.cpp
src/errors/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.hpp  main.cpp  prog
src/hash/: main.cpp
src/middleware/: CMakeLists.txt
src/middleware/src/: AuthMiddleware.cpp  AuthMiddleware.hpp  JWT.cpp  JWT.hpp  main.cpp
src/model/src/: Contact.cpp  Contact.hpp  Profile.cpp  Profile.hpp  User.cpp  User.hpp  UserValidator.cpp  UserValidator.hpp  main.cpp
